--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="OTP Has Been Sent"
+        android:text="OTP Has Been Sent 📲"
         android:textColor="@android:color/black"
         android:textSize="32sp"
         android:textStyle="bold"
