--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.RecipeAPPOPSC6312" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:fontFamily">@font/inter</item>
     </style>
 
     <!-- In res/values/themes.xml -->
@@ -15,6 +16,19 @@
         <item name="android:maxLength">1</item>
         <item name="android:textSize">20sp</item>
         <item name="android:layout_margin">4dp</item>
+    </style>
+
+    <style name="ShapeAppearance.App.Corner.Right" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">32dp</item>
+        <item name="cornerSizeBottomRight">32dp</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <style name="ShapeAppearance.App.Corner.All" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">24dp</item>
     </style>
 
     <style name="Theme.RecipeAPPOPSC6312" parent="Base.Theme.RecipeAPPOPSC6312" />
