--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -47,7 +47,7 @@
     <!-- New Password Input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutNewPassword"
-        style="@style/Widget.MaterialComponents.TextInputLayout.StandardBox"
+        style="@style/Widget.App.TextInputLayout.Underlined"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -67,7 +67,7 @@
     <!-- Confirm Password Input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutConfirmPassword"
-        style="@style/Widget.MaterialComponents.TextInputLayout.StandardBox"
+        style="@style/Widget.App.TextInputLayout.Underlined"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
