--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -94,6 +94,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Notifications"
+                    android:drawableStart="@drawable/ic_alert"
+                    android:drawablePadding="16dp"
                     android:checked="true"
                     android:paddingVertical="12dp"/>
 
