--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,14 @@
         <item name="android:fontFamily">@font/inter</item>
     </style>
 
-    <!-- In res/values/themes.xml -->
+    <style name="Widget.App.TextInputLayout.Underlined" parent="Widget.Material3.TextInputLayout.FilledBox">
+        <item name="boxBackgroundColor">@android:color/transparent</item>
+    </style>
+
+    <style name="Widget.App.TextInputLayout.Underlined.ExposedDropdownMenu" parent="Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu">
+        <item name="boxBackgroundColor">@android:color/transparent</item>
+    </style>
+
     <style name="OtpEditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">48dp</item>
