Added login and register and dummydata and contect some logics

--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:padding="32dp"
+    android:fitsSystemWindows="true"
     tools:context=".OtpActivity">
 
     <!-- Back Arrow -->
