--- a/app/src/main/res/layout/activity_profile_completion.xml
+++ b/app/src/main/res/layout/activity_profile_completion.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:fitsSystemWindows="true"
     tools:context=".ProfileCompletionActivity">
 
     <!-- Back Arrow and Progress Bar -->
@@ -115,7 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="32dp"
-        android:hint="Gender"
+        android:hint="Gender (optional)"
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -133,7 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="32dp"
-        android:hint="Date of Birth"
+        android:hint="Date of Birth (optional)"
         app:endIconMode="custom"
         app:endIconDrawable="@drawable/ic_calendar"
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutGender"
