--- a/app/src/main/res/layout/popup_notifications.xml
+++ b/app/src/main/res/layout/popup_notifications.xml
@@ -12,6 +12,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textViewNoNotifications"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No new notifications"
+            android:gravity="center"
+            android:padding="24dp"
+            android:visibility="gone" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewPopupNotifications"
             android:layout_width="match_parent"
