--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,13 +9,13 @@
         android:icon="@drawable/ic_discover"
         android:title="Discover"/>
     <item
-        android:id="@+id/nav_placeholder"
-        android:title=""
-        android:enabled="false"/>
+        android:id="@+id/nav_scan"
+        android:icon="@drawable/ic_scan"
+        android:title="Scan"/>
     <item
         android:id="@+id/nav_cart"
         android:icon="@drawable/ic_cart"
-        android:title="Cart"/>
+        android:title="Shop List"/>
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
