--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="16dp"
         android:text="Harmony Kitchen"
         android:textSize="34sp"
+        android:textColor="@color/black"
         android:fontFamily="@font/islandmoments_regular"
         app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView"
         app:layout_constraintEnd_toEndOf="parent"
