--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.RecipeAPPOPSC6312" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="android:fontFamily">@font/inter</item>
+        <item name="colorPrimary">@color/primary_blue</item>
+        <!-- Other theme attributes -->
+        <item name="android:windowBackground">@color/light_background</item>
+        <item name="android:textColor">@color/light_text</item>
+        <item name="fontFamily">@font/inter</item>
     </style>
 
     <style name="Widget.App.TextInputLayout.Underlined" parent="Widget.Material3.TextInputLayout.FilledBox">
